--- a/site/module2-solution/index.html
+++ b/site/module2-solution/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>mod2</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Assigment 2</title>
+	<link rel="stylesheet" href="./css/stylesheets.css">
 </head>
 <body>
-<h1>Mod 2</h1>
+
+	<div id="title">Our Menu</div>
+	<div id="mobile-title">Categories</div>
+	<div class="col-lg-4 col-md-6">
+		<div class="card">
+			<div class="card-title" id="chicken-title">Chicken</div>
+			<div class="card-m-title" id="chicken-title">Chicken - Panko-breaded chicken with Asian coleslaw; served with Asian BBQ dipping sauce.</div>
+			<div class="card-content">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.
+			</div>
+		</div>	
+	</div>
+
+	<div class="col-lg-4 col-md-6">
+		<div class="card">
+			<div class="card-title" id="beef-title">Beef</div>
+			<div class="card-m-title" id="beef-title">Beef - Grilled Beef served over rice with sautéed zucchini, mushrooms and onions</div>
+			<div class="card-content">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.
+			</div>
+		</div>	
+	</div>
+
+	<div class="col-lg-4 col-md-12">
+		<div class="card">
+			<div class="card-title" id="sushi-title">Sushi</div>
+			<div class="card-m-title" id="sushi-title">Sushi - Lobster tempura and avocado rolled and topped with seared filet mignon, wasabi sauce</div>
+			<div class="card-content">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur velit ex, vitae ullamcorper tortor laoreet dictum. Donec pharetra convallis posuere. Integer tincidunt auctor dolor id pharetra. Mauris et hendrerit nunc. Nunc tempus neque in elit feugiat tristique. Praesent volutpat mauris id aliquam euismod. Ut at egestas dolor.
+			</div>	
+		</div>	
+	</div>
+
 </body>
 </html>
