--- a/site/module10-solution/SpecRunner.html
+++ b/site/module10-solution/SpecRunner.html
@@ -14,7 +14,27 @@
   <!-- include source files here... -->
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-mocks.js"></script>
-  <script src="app.js"></script>
+  
+      <!-- Main Restaurant Module -->
+    <script src="src/restaurant.module.js"></script>
+      <!-- Common Module -->
+    <script src="src/common/common.module.js"></script>
+    <script src="src/common/loading/loading.component.js"></script>
+    <script src="src/common/loading/loading.interceptor.js"></script>
+    <script src="src/common/menu.service.js"></script>
+
+    <script src="src/common/myInfo.service.js"></script>
+    <!-- Public Module -->
+    <script src="src/public/public.module.js"></script>
+    <script src="src/public/public.routes.js"></script>
+    <script src="src/public/menu/menu.controller.js"></script>
+    <script src="src/public/myinfo/myinfo.controller.js"></script>
+    <script src="src/public/signup/check-item.directive.js"></script>
+    <script src="src/public/signup/signup.controller.js"></script>
+
+    <script src="src/public/menu-category/menu-category.component.js"></script>
+    <script src="src/public/menu-items/menu-items.controller.js"></script>
+    <script src="src/public/menu-item/menu-item.component.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/myInfo.service.spec.js"></script>
